@@ -1,3 +1,10 @@
+2008-06-12  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rb_cairo_private.h: add fallback RARRAY_PTR and RARRAY_LEN.
+
+	* src/rb_cairo_context.c, src/rb_cairo_pattern.c: use RARRAY_PTR
+	and RARRAY_LEN.
+
 2008-04-30  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rb_cairo.h: move environment dependent headers to ...
